T4 - 7 - template, css - fix the bug related with the distortion of the uploaded photo

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,12 @@
     display: none;
 }
 
+.image {
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
+}
+
 .error {
     color: red;
 }
